Used a custom /docs html file to change the tab name on the browser
